# report-parser-python

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  sam-task-lambda-template.yml  sam-template.yml
scripts/: cache_data.json  upload_email_cache.py
src/report_parser/: handler.py
src/report_parser/events/: report-created.json
src/task_2_email/: handler.py
src/task_2_email/events/: sns.json
