[tool.poetry]
name = "report-parser-python"
version = "0.1.0"
description = ""
authors = ["Ash Murphy <amurphy9956@live.com>"]

[tool.poetry.dependencies]
boto3 = "^1.20.24"
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "21.12b0"
flake8 = "4.0.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
